Fixed: the maximized widget overlapped other widgets
Fixed: removed transpated background for settings in the dark, darker and transparent modes

--- a/app/css/_app.scss
+++ b/app/css/_app.scss
@@ -2649,6 +2649,7 @@ body > .widgets-container {
 
 	&.maximized {
 		width: auto;
+		z-index: 9;
 	}
 }
 
@@ -2810,6 +2811,11 @@ body.resizing .grid {
 .transparent.darker .widget-preview .widget,
 .transparent.darker .widgets-container .widget {
 	background: rgba(0, 0, 0, .6);
+}
+
+.transparent.darker .widgets-container .widget.settings,
+.transparent.dark .widgets-container .widget.settings {
+	background: black;
 }
 
 @keyframes widget-box-shadow {
